--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=project-behnam-askari-azmoon-man
-spring.datasource.url=jdbc:postgresql://localhost:5432/maktab_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/azmoon
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
